# pdf-tools

./: .gitignore  pyproject.toml
input/: acroform.txt  sample_data.txt
output/: auto_fill_results.json
src/acroform/: acroform_extractor.py  acroform_filler.py  add_understanding.py  llm.py
src/auto_fill/: acroform.py  labelling.py
tests/: acroform.py
tests/acroform/: auto_fill.py  extract.py  mapping.py
