[project]
name = "pdf-tools"
version = "0.1.0"
description = "PDF tools to extract, translate & autofill PDF form fields"
authors = [
    {name = "Viktor Laurens De Groote",email = "viktor.degroote@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pikepdf (>=9.7.0,<10.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "reportlab (>=4.4.1,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "pymupdf (>=1.26.0,<2.0.0)",
    "google-genai (>=1.16.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
